# modal-gpu-retry

./: .gitignore  LICENSE  NOTES.txt  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish.yml
assets/: banner.html  banner_decorator.html
examples/: README.md  batch_jobs.py  cls_local_and_detached.py  detached_jobs.py  gpu_escalation_sweep.py
integration/: app.py  func_app.py  get.py  mangle_app.py  spawn.py
probe/: get_detached.py  probe_app.py  spawn_detached.py
src/modal_gpu_retry/: __init__.py  gpuretry.py  ladder.py  proxy.py  wrapper.py
tests/: test_gpuretry.py  test_integration.py  test_ladder.py  test_proxy_wiring.py  test_wrapper.py
