[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modal-gpu-retry"
version = "0.0.2"
description = "Lightweight Modal wrapper for automatic GPU escalation upon job failures."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Alexander Kranias", email = "alexander.kranias@gmail.com" }]
keywords = ["modal", "gpu", "retry", "oom", "escalation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
# Function.with_options (used for per-tier escalation) requires modal>=1.5,
# which itself requires Python>=3.10.
dependencies = ["modal>=1.5"]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/alexkranias/modal-gpu-retry"
Issues = "https://github.com/alexkranias/modal-gpu-retry/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/modal_gpu_retry"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
